--- a/app/web/build.gradle
+++ b/app/web/build.gradle
@@ -1,14 +1,3 @@
-group 'com.nokia.knowcamp'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-  mavenCentral()
-}
-
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.11'
+  compile 'org.springframework.cloud:spring-cloud-starter-eureka'
 }
